--- a/src/main/resources/public/template/workflow/workFlowSearch.html
+++ b/src/main/resources/public/template/workflow/workFlowSearch.html
@@ -296,7 +296,7 @@
         };
 
         aliceJs.fetchText('/rest/workflows/' + documentId + '/display', {
-            method: 'POST',
+            method: 'PUT',
             headers: {
                 'Content-Type': 'application/json'
             },
