--- a/src/main/resources/public/scss/document/_layout.scss
+++ b/src/main/resources/public/scss/document/_layout.scss
@@ -64,7 +64,7 @@
     background-color: $layout-properties-bg-color;
     @include border($layout-properties-border-width, solid, $layout-properties-border-color, left);
     padding: 0 4.0625rem;
-    overflow-y: auto;
+    overflow: hidden;
 
     .z-token-tabs {
       display: flex;
@@ -85,20 +85,24 @@
     }
     // 탭 내용
     .z-token-panels {
-      height: 43.75rem;
+      height: 100%;
       overflow-y: auto;
 
       .z-token-panel {
         display: none;
 
         &.on { display: block; }
+
+        // 아이콘
+        .z-icon {
+          &.i-delete { background: $element-icon-color; }
+        }
       }
 
       .z-token {
         // 태그
         &-tag {
-          display: none;
-          margin-top: 1.25rem; // 20px
+          margin: 0.625rem 0 0 0; // 10px 0 0 0
         }
 
         // 처리 이력
@@ -153,7 +157,6 @@
 
         // 관련 문서
         &-related {
-
           &-sub-title {
             display: block;
             color: $token-tab-sub-title-color;
@@ -162,15 +165,23 @@
 
           &-item {
             height: 9.75rem; // 156px
-            margin: 0.625rem 0.625rem 0 0; // 10px 10px 0 0
+            margin: 0.625rem 0 0 0; // 10px 0 0 0
 
             // 추가된 관련 문서
             .z-document {
-              &-color { width: 0.375rem; } // 6px
+              &-color {
+                width: 0.375rem;  // 6px
+                @include borderRadius($token-related-border-radius);
+                border-top-right-radius: 0;
+                border-bottom-right-radius: 0;
+              }
 
               &-row {
                 flex: 1;
                 @include border($token-related-border-width, solid, $token-related-border-color, all);
+                @include borderRadius($token-related-border-radius);
+                border-top-left-radius: 0;
+                border-bottom-left-radius: 0;
                 padding: 1rem; // 16px
                 &-content {
                   a {
@@ -192,15 +203,12 @@
                       }
                     }
                   }
-
-                  .z-icon {
-                    &.i-delete { background: $element-icon-color; }
-                  }
                 }
 
-                &-topic { height: 100%; }
-
-                &-info { }
+                &-topic {
+                  height: 100%;
+                  h6 { width: 27.5rem; } // 440px (말줄임을 위하여 너비 지정)
+                }
               }
             }
           }
@@ -221,64 +229,38 @@
 
         // 댓글
         &-comment {
-          padding-top: 0.625rem; // 10px
+          &-item {
+            padding: 1rem; // 16px
+            margin: 0.625rem 0 0 0; // 10px 0 0 0
+            @include border($token-comment-border-width, solid, $token-comment-border-color, all);
+            @include borderRadius($token-comment-border-radius);
 
-          .list-item {
-            padding: 1.25rem 1.5625rem; // 20px 25px
-            margin: 0.625rem 0.625rem 0 0; // 10px 10px 0 0
-            border: 0.0625rem solid map-get($grays, 'line'); // 1px
-            border-radius: 0.1875rem; // 3px
-            background-color: map-get($grays, 'light');
-
-            .comment {
+            .z-comment {
               &-row {
-                color: map-get($grays, 'dark');
-                margin-top: 0.625rem; // 10px
-                @include wordWrap(break-word);
-
                 &-info {
-                  .user-name {
-                    color: map-get($grays, 'dark');
+                  .z-user-name {
+                    font-weight: $font-weight-bold;
+                    color: $token-comment-user-name-color;
                   }
 
-                  .date-time {
-                    color: $gray;
-                    margin-left: 0.625rem; // 10px
+                  .z-comment-time {
+                    color: $token-comment-time-color;
+                    margin-left: 0.5rem; //8px
                   }
+                }
 
-                  button {
-                    padding: 0;
-
-                    .icon-delete {
-                      background: map-get($grays, 'pressed');
-                    }
-                  }
-
-                  div:last-child {
-                    margin-left: auto;
-                  }
+                &-content {
+                  height: 100%;
+                  margin: 0.625rem 0 0 0; // 10px 0 0 0
+                  h6 { width: 27.5rem; } // 440px (말줄임을 위하여 너비 지정)
                 }
               }
             }
           }
 
-          .comment-input {
-            margin-top: 0.625rem; // 10px
-            padding: 0;
-
-            textarea {
-              flex: 1;
-              min-height: 4.063rem; // 65px
-              padding: 0.625rem 1.563rem; // 10px 25px
-              margin-right: 0.3125rem; // 5px
-              border-radius: 0.1875rem; // 3px
-            }
-
-            .textarea-scroll-wrapper {
-              width: 24.6875rem; // 395px
-              height: 4.0625rem; // 65px
-              margin-right: 0.3125rem; // 5px
-            }
+          // 댓글 추가
+          .z-comment-add {
+            margin: 0.625rem 0 0 0; // 10px 0 0 0
           }
         }
       }
