--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -15,20 +15,28 @@
         <form id="frm" name="frm">
             <div class="z-document-main flex-column align-items-center">
                 <input type="hidden" id="tokenId" th:value="${tokenId}" />
-                <input type="hidden" id="instanceId" />
+                <input type="hidden" id="folderId" th:value="${folderId}"/>
                 <div class="z-document-main-header flex-row justify-content-between align-items-center flex-wrap">
                     <span class="z-document-numbering" th:text="|#{document.label.docNo} : ${documentNo}|"></span>
                     <div id="defaultButtonArea"></div>
                     <div class="z-action-button-top-area" id="actionButtonTopArea"></div>
                 </div>
-                <div class="z-drawing-board" id="documentPanel" data-display="token"></div>
+                <div class="z-drawing-board" id="documentDrawingBoard" data-display="token"></div>
                 <div class="z-document-main-footer flex-row justify-content-end align-items-center flex-wrap">
                     <div class="z-action-button-bottom-area" id="actionButtonBottomArea"></div>
                 </div>
             </div>
         </form>
-        <div class="z-token-properties" id="documentProperties"></div>
+        <div class="z-token-properties flex-column" id="documentProperties"></div>
     </div>
+    <!-- 다른이름으로 저장하기 모달-->
+    <template id="relatedTokenModalTemplate">
+        <div class="related-instance-list">
+            <input class="z-input i-search col-5 mr-2" type="text" name="search" id="search" maxlength="100" th:placeholder="#{token.label.relatedInstancePlaceholder}"/>
+            <span id="spanTotalCount" class="search-count"></span>
+            <div class="table-set" id="instanceList"></div>
+        </div>
+    </template>
 </th:block>
 </body>
 <th:block layout:fragment="script">
@@ -53,271 +61,15 @@
         aliceJs.fetchJson('/rest/tokens/' + '[[${tokenId}]]' + '/data', {
             method: 'GET'
         }).then((formDataJson) => {
-            document.getElementById('instanceId').value = formDataJson?.instanceId;
+            formDataJson.tokenId = document.getElementById('tokenId').value;
+            formDataJson.folderId = document.getElementById('folderId').value;
 
-            zFormToken.init(document.getElementById('documentPanel'), formDataJson);
+            zFormToken.init(formDataJson);
             zFormButton.init(formDataJson, zFormToken);
+
+            window.zFormToken = zFormToken;
         });
         /*]]>*/
-    </script>
-    <script type="text/javascript">
-        // 탭 정보들 조회하여 셋팅.
-        let tokenListModal, instanceId;
-
-        window.onload = function() {
-            // 탭 생성
-            aliceJs.fetchText('/tokens/' + '[[${tokenId}]]' + '/edit-tab', {
-                method: 'GET'
-            }).then((htmlData) => {
-                document.getElementById('documentProperties').innerHTML = htmlData;
-
-                // 탭 이벤트
-                document.querySelectorAll('.z-token-tab').forEach((tab) => {
-                    tab.addEventListener('click', selectTokenTab, false);
-                });
-                sessionStorage.setItem('alice_token-tab-selected', 'tokenInformation'); // 처음 생성시 문서 정보 클릭
-
-                // 날짜 초기화
-                setDateTimeFormat();
-
-                // 스크롤바
-                OverlayScrollbars(document.querySelectorAll('.z-token-panels'), {className: 'scrollbar'});
-
-                // 디자인된 selectbox
-                aliceJs.initDesignedSelectTag();
-
-                // 태그 초기화
-                /*new zTag(document.querySelector('input[name=tags]'),{
-                    suggestion: true,
-                    realtime: true,
-                    tagType: 'instance',
-                    targetId: document.getElementById('instanceId').value
-                })*/
-            });
-        }
-
-        /**
-         * 탭 선택시 이벤트 핸들러
-         */
-        function selectTokenTab(e) {
-            // 탭 동작
-            Array.prototype.filter.call(e.target.parentNode.children, function (child) {
-                return child !== e.target;
-            }).forEach((siblingElement) => {
-                siblingElement.classList.remove('active');
-            });
-            e.target.classList.add('active');
-
-            // 컨텐츠 내용 동작
-            let selectedTab = document.getElementById(e.target.dataset.targetContents);
-            if (selectedTab != null) {
-                Array.prototype.filter.call(selectedTab.parentNode.children, function (child) {
-                    return child !== selectedTab;
-                }).forEach((siblingElement) => {
-                    siblingElement.classList.remove('on');
-                });
-                selectedTab.classList.add('on');
-            }
-
-            // 선택된 탭을 저장 > 새로고침시 초기화를 막기 위함
-            sessionStorage.setItem('alice_token-tab-selected', e.target.dataset.targetContents);
-        }
-
-        /**
-         * 서버에서 전달받은 데이터의 날짜 포맷을 변경한다.
-         */
-        function setDateTimeFormat() {
-            document.querySelectorAll('.dateFormatFromNow').forEach((element) => {
-                element.textContent = dateFormatFromNow(element.textContent);
-            });
-
-            document.querySelectorAll('.date-time').forEach((element) => {
-                element.textContent = i18n.userDateTime(element.textContent);
-            });
-        }
-
-        /**
-         * 토큰 탭 화면 초기화
-         */
-        function tabInit() {
-            aliceJs.sendXhr({
-                method: 'GET',
-                url: '/tokens/' + '[[${tokenId}]]' + '/edit-tab',
-                async: false,
-                showProgressbar: false,
-                callbackFunc: function (response) {
-                    addCommentBox(instanceId);
-                }
-            });
-        }
-
-        /**
-         * Comment Object.
-         *
-         * @param instanceId
-         */
-        function addCommentBox(instanceId) {
-            let commentContainer = document.getElementById('comment-container');
-            if (commentContainer !== null) {
-
-                let commentBoxTextarea = document.createElement('textarea');
-                commentBoxTextarea.id = 'commentValue';
-                commentBoxTextarea.setAttribute('placeholder', i18n.msg('comment.msg.enterComments'));
-                commentBoxTextarea.className = 'textarea-scroll-wrapper';
-                let commentButton = document.createElement('button');
-                commentButton.type = 'button';
-                commentButton.innerText = i18n.msg('common.btn.register');
-                commentButton.className = 'z-button form';
-                commentButton.addEventListener('click', function () {
-                    // 유효성 검증
-                    if (isEmpty('commentValue', 'comment.msg.enterComments')) { return false; }
-                    saveComment(instanceId, commentBoxTextarea.value);
-                });
-
-                commentContainer.appendChild(commentBoxTextarea);
-                commentContainer.appendChild(commentButton);
-
-                OverlayScrollbars(commentContainer.querySelector('textarea'), {
-                    className: 'inner-scrollbar',
-                    resize: 'vertical',
-                    sizeAutoCapable: true,
-                    textarea: {
-                        dynHeight: false,
-                        dynWidth: false,
-                        inheritedAttrs: 'class'
-                    }
-                });
-            }
-        }
-
-        function openProcessStatusPopUp() {
-            window.open('/process/[[${instanceId}]]/status', 'process_status_[[${instanceId}]]', 'width=1300, height=500');
-        }
-
-        function openTokenEdit(tokenId) {
-            const _width = 1500, _height = 920;
-            const _left = Math.ceil((window.screen.width - _width) / 2);
-            const _top = Math.ceil((window.screen.height - _height) / 4);
-            window.open('/tokens/' + tokenId + '/view', 'token_' + tokenId, 'width=' + (screen.width - 50) + ', height=' + (screen.height - 150) + ', left=' + _left + ', top=' + _top);
-        }
-
-        /**
-         * Save Comment.
-         *
-         * @param instanceId
-         * @param comment
-         */
-        function saveComment(instanceId, comment) {
-            let data = {
-                instanceId: instanceId,
-                content: comment
-            };
-            const opt = {
-                method: 'POST',
-                url: '/rest/comments',
-                params: JSON.stringify(data),
-                contentType: 'application/json',
-                callbackFunc: function(xhr) {
-                    if (xhr.responseText) {
-                        tabInit();
-                    } else {
-                        aliceAlert.alertDanger(i18n.msg('common.msg.fail'));
-                    }
-                }
-            };
-            aliceJs.sendXhr(opt);
-        }
-
-        // 관련문서 모달
-       function openRelatedTokenModal() {
-            tokenListModal = new modal({
-                title: i18n.msg('token.label.relatedInstance'),
-                body: createModalContent(),
-                classes: 'token-list',
-                buttons: [{
-                    content: i18n.msg('common.btn.select'),
-                    classes: 'z-button primary',
-                    bindKey: false,
-                    callback: function() {
-                        saveTokenList();
-                    }
-                },{
-                    content: i18n.msg('common.btn.cancel'),
-                    classes: 'z-button secondary',
-                    bindKey: false,
-                    callback: function(modal) {
-                        modal.hide();
-                    }
-                }],
-                close: {
-                    closable: false,
-                },
-                onCreate: function() {
-                    document.getElementById('search').addEventListener('keyup', function() {
-                        getInstanceList(this.value, false);
-                    });
-                    getInstanceList(document.getElementById('search').value, true);
-                }
-            });
-            tokenListModal.show();
-        }
-
-        // 관련 문서 모달 내부 Template
-        function createModalContent() {
-            return `<div class="related-instance-list">` +
-                `<input class="z-input i-search col-5 mr-2" type="text" name="search" id="search" maxlength="100" placeholder="${i18n.msg('token.label.relatedInstancePlaceholder')}"/><span id="spanTotalCount" class="search-count"></span>` +
-                `<div class="table-set" id="instanceList"></div>` +
-                `</div>`;
-        }
-
-        // 관련문서 추가
-        function saveTokenList() {
-            let checked = document.querySelectorAll('input[name=chk]:checked');
-            if (checked.length === 0) {
-                aliceAlert.alertWarning(i18n.msg('token.msg.selectToken'));
-            } else {
-                let jsonArray = [];
-                for (let i = 0; i < checked.length; i++) {
-                    let jsonObject = {};
-                    jsonObject.folderId = '[[${folderId}]]';
-                    jsonObject.instanceId = checked[i].value;
-                    jsonArray.push(jsonObject);
-                }
-                restSubmit('POST', '/rest/folders', function() {
-                    aliceDocument.createTokenInfoTab();
-                    tokenListModal.hide();
-                }, jsonArray, true);
-            }
-        }
-
-        function getInstanceList(search, showProgressbar) {
-            restSubmit('get', '/tokens/view-pop/documents?searchValue=' + search.trim() + '&tokenId=' + '[[${tokenId}]]', function(result) {
-                document.getElementById('instanceList').innerHTML = result;
-                aliceJs.showTotalCount(document.querySelectorAll('.instance-list').length);
-                let instanceDtEle = document.querySelectorAll('td[name=instanceDt]');
-                for (let i = 0; i < instanceDtEle.length; i++) {
-                    if (instanceDtEle[i].textContent !== '') {
-                        instanceDtEle[i].textContent = i18n.userDateTime(instanceDtEle[i].textContent);
-                    }
-                }
-                // 스크롤바
-                OverlayScrollbars(document.querySelector('.z-list-body'), { className: 'scrollbar' });
-            }, null, showProgressbar);
-        }
-
-        function restSubmit(method, url, result, data, showProgressbar) {
-            const opt = {
-                method: method,
-                url: url,
-                params: JSON.stringify(data),
-                contentType: 'application/json',
-                showProgressbar: showProgressbar,
-                callbackFunc: function (response) {
-                    result(response.responseText);
-                }
-            };
-            aliceJs.sendXhr(opt);
-        }
     </script>
 </th:block>
 </html>
