--- a/src/main/resources/public/template/token/tokenEditTab.html
+++ b/src/main/resources/public/template/token/tokenEditTab.html
@@ -35,66 +35,74 @@
         </div>
         <div class="z-token-related">
             <label class="z-token-related-sub-title" th:text="#{token.label.relatedInstance}"></label>
-            <div class="z-token-related-item flex-row" th:each="rInstance: ${relatedInstance}">
-                <div class="z-document-color" th:style="|background-color: ${rInstance.documentColor}|"></div>
-                <div class="z-document-row flex-column">
-                    <div class="z-document-row-content flex-row justify-content-between">
-                        <a th:onclick="openTokenEdit([[${rInstance.tokenId}]])">
-                            <div class="z-document-title flex-row align-items-center">
-                                <h6 th:text="${rInstance.documentName}"></h6>
-                                <h6 th:text="${rInstance.documentNo}"></h6>
-                            </div>
-                        </a>
-                        <button type="button" class="z-button-icon"
-                                th:onclick="aliceDocument.deleteRelatedDoc({folderId: [[${rInstance.folderId}]], instanceId: [[${rInstance.instanceId}]]})">
-                            <span class="z-icon i-delete"></span>
-                        </button>
-                    </div>
-                    <div class="z-document-row-topic">
-                        <h6 th:each="topic: ${rInstance.topics}" th:text="${topic}"></h6>
-                    </div>
-                    <div class="z-document-row-info flex-row align-items-center">
-                        <div class="flex-row align-items-center">
-                            <img class="z-img i-profile-photo mr-2" th:src="@{${rInstance.avatarPath}}" width="30" height="30"/>
-                            <h6 th:text="${rInstance.instanceCreateUserName}"></h6>
+            <th:block th:each="rInstance: ${relatedInstance}">
+                <div class="z-token-related-item flex-row" th:id="'relatedDoc' + ${rInstance.instanceId}">
+                    <div class="z-document-color" th:style="|background-color: ${rInstance.documentColor}|"></div>
+                    <div class="z-document-row flex-column">
+                        <div class="z-document-row-content flex-row justify-content-between">
+                            <a th:onclick="zFormToken.openTokenEditPop([[${rInstance.tokenId}]])">
+                                <div class="z-document-title flex-row align-items-center">
+                                    <h6 th:text="${rInstance.documentName}"></h6>
+                                    <h6 th:text="${rInstance.documentNo}"></h6>
+                                </div>
+                            </a>
+                            <button type="button" class="z-button-icon"
+                                    th:onclick="zFormToken.removeRelatedDoc({ folderId: [[${rInstance.folderId}]], instanceId: [[${rInstance.instanceId}]] })">
+                                <span class="z-icon i-delete"></span>
+                            </button>
                         </div>
-                        <span class="vertical-bar"></span>
-                        <h6 class="dateFormatFromNow" th:text="${rInstance.instanceStartDt}"></h6>
-                        <span class="vertical-bar"></span>
-                        <h6 th:text="#{|common.code.token.status.${rInstance.instanceStatus}|}"></h6>
+                        <div class="z-document-row-topic">
+                            <h6 class="text-ellipsis" th:each="topic: ${rInstance.topics}" th:text="${topic}"></h6>
+                        </div>
+                        <div class="z-document-row-info flex-row align-items-center">
+                            <div class="flex-row align-items-center">
+                                <img class="z-img i-profile-photo mr-2" th:src="@{${rInstance.avatarPath}}" width="30" height="30"/>
+                                <h6 th:text="${rInstance.instanceCreateUserName}"></h6>
+                            </div>
+                            <span class="vertical-bar"></span>
+                            <h6 class="dateFormatFromNow" th:text="${rInstance.instanceStartDt}"></h6>
+                            <span class="vertical-bar"></span>
+                            <h6 th:text="#{|common.code.token.status.${rInstance.instanceStatus}|}"></h6>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </th:block>
             <div class="z-token-related-item flex-row justify-content-center align-items-center z-document-add">
-                <button class="z-button-icon" th:onclick="openRelatedTokenModal()">
+                <button class="z-button-icon" th:onclick="zFormToken.openRelatedDocModal()">
                     <span class="z-icon i-plus"></span>
                 </button>
             </div>
         </div>
     </div>
     <div class="z-token-panel z-token-comment" id="tokenComment">
-        <div class="list-item flex-column" th:each="comment : ${commentList}">
-            <div class="comment-row-info flex-row align-items-center">
-                <div class="comment-user flex-row align-items-center">
-                    <img class="z-img i-profile-photo mr-2" th:src="@{${comment.avatarPath}}" width="32" height="32"/>
-                    <h5 class="user-name" th:text="${comment.createUserName}"></h5>
+        <th:block th:each="comment : ${commentList}">
+            <div class="z-token-comment-item flex-column" th:id="'comment' + ${comment.commentId}">
+                <div class="z-comment-row-info flex-row align-items-center">
+                    <div class="flex-row align-items-center">
+                        <img class="z-img i-profile-photo mr-2" th:src="@{${comment.avatarPath}}" width="30" height="30"/>
+                        <h6 class="z-user-name" th:text="${comment.createUserName}"></h6>
+                    </div>
+                    <h6 class="z-comment-time date-time" th:text="${comment.createDt}"></h6>
+                    <div class="ml-auto">
+                        <button th:if="${#authentication.details.userKey} == ${comment.createUserKey}" class="z-button-icon"
+                                th:attr="onclick=|zFormToken.removeComment('${comment.commentId}')|">
+                            <span class="z-icon i-delete"></span>
+                        </button>
+                    </div>
                 </div>
-                <h5 class="date-time" th:text="${comment.createDt}"></h5>
-                <div th:if="${#authentication.details.userKey} == ${comment.createUserKey}">
-                    <button th:attr="onclick=|aliceDocument.deleteComment('${comment.commentId}')|">
-                        <span class="icon icon-delete"></span>
-                    </button>
+                <div class="z-comment-row-content">
+                    <h6 class="text-ellipsis" th:text="${comment.content}"></h6>
                 </div>
             </div>
-            <div class="comment-row">
-                <span th:text="${comment.content}"></span>
-            </div>
+        </th:block>
+        <div class="z-comment-add flex-row align-items-start">
+            <textarea id="commentValue" class="z-textarea textarea-scroll-wrapper flex-fill mr-1" maxlength="200" rows="2" th:placeholder="#{comment.msg.enterComments}"></textarea>
+            <button class="z-button secondary" th:onclick="zFormToken.saveComment()" th:text="#{common.btn.register}"></button>
         </div>
-        <div id="comment-container" class="comment comment-input flex-row align-items-start"></div>
     </div>
     <div class="z-token-panel z-token-tag" id="tokenTag">
         <div class="tag-input">
-            <input name="tags" id="tags" th:value="|${tagList}|"/>
+            <input type="text" class="z-input" id="tokenTags" th:value="${tagList}" />
         </div>
     </div>
 </div>
