--- a/src/main/resources/public/template/token/tokenView.html
+++ b/src/main/resources/public/template/token/tokenView.html
@@ -7,8 +7,7 @@
 </head>
 <th:block layout:fragment="css">
     <link th:href="@{/assets/css/document.css}" rel="stylesheet"/>
-    <link th:href="@{/assets/theme/{theme}/css/itsm.css(theme=${#authentication.details.theme})}"
-          rel="stylesheet"/>
+    <link th:href="@{/assets/theme/{theme}/css/itsm.css(theme=${#authentication.details.theme})}" rel="stylesheet"/>
 </th:block>
 <body>
 <th:block layout:fragment="content">
@@ -23,7 +22,7 @@
                         <button type="button" class="z-button form" th:onclick="aliceDocument.print('/tokens/' + [[${tokenId}]])" th:text="#{common.btn.print}"></button>
                     </div>
                 </div>
-                <div class="z-drawing-board" id="documentPanel"></div>
+                <div class="z-drawing-board" id="documentDrawingBoard"></div>
             </div>
         </form>
         <div class="z-token-properties">
@@ -66,7 +65,7 @@
                                         </div>
                                     </a>
                                     <button type="button" class="z-button-icon"
-                                            th:onclick="aliceDocument.deleteRelatedDoc({folderId: [[${rInstance.folderId}]], instanceId: [[${rInstance.instanceId}]]})">
+                                            th:onclick="zFormToken.removeRelatedDoc({folderId: [[${rInstance.folderId}]], instanceId: [[${rInstance.instanceId}]]})">
                                         <span class="z-icon i-delete"></span>
                                     </button>
                                 </div>
@@ -128,8 +127,8 @@
         /*<![CDATA[*/
         window.onload = function () {
             // view 일 경우, 컴포넌트들의 세부 값을 편집 할 수 없음
-            const documentPanel = document.getElementById('documentPanel');
-            documentPanel.setAttribute('data-display', 'complete');
+            const documentDrawingBoard = document.getElementById('documentDrawingBoard');
+            documentDrawingBoard.setAttribute('data-display', 'complete');
 
             aliceForm.init(aliceDocument.initToken, '[[${tokenId}]]');
             var tokenDtEle = document.querySelectorAll('td[name=tokenDt]');
